<resources>
    <string name="app_name">Sms Router</string>
    <!--    navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!--    menu actions-->
    <string name="action_settings">Settings</string>
    <string name="action_saved_sms">Load Inbox Sms</string>
    <string name="action_print">Print</string>
    <string name="action_forward_sms">Forward sms</string>
    <string name="action_share_logs">Share Logs</string>
    <string name="action_save_phone_number">Save phone number</string>
    <string name="action_import">Import all sms</string>

    <string name="menu_home">Home</string>
    <string name="menu_Uploaded">Uploaded Messages</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_about">About</string>
    <string name="menu_phone_status">Phone Status</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  preference values  -->
    <string-array name="mpesa_types">
        <item>Pay Bill</item>
        <item>Buy Goods and Services</item>
        <item>Direct Mpesa</item>
        <item>All</item>
    </string-array>

    <!--  preference values  -->
    <string-array name="mpesa_types_notification">
        <item>Pay Bill</item>
        <item>Buy Goods and Services</item>
        <item>Direct Mpesa</item>
        <item>All</item>
        <item>None</item>
    </string-array>

    <string-array name="print_types">
        <item>Pay Bill</item>
        <item>Buy Goods and Services</item>
        <item>Direct Mpesa</item>
    </string-array>

    <string name="sim_card_one">Sim Card 1</string>
    <string name="sim_card_two">Sim Card 2</string>

    <string name="internal_db">Default Sms Database</string>
    <string name="incoming_db">Only Incoming Sms</string>

    <string-array name="sms_source">
        <item>@string/internal_db</item>
        <item>@string/incoming_db</item>
    </string-array>


    <string-array name="sim_cards">
        <item>@string/sim_card_one</item>
        <item>@string/sim_card_two</item>
    </string-array>

    <string name="host_url">https://www.server.com</string>
    <string name="phone_number">Add a phone number to forward sms to with the forward icon</string>
    <string name="loading_messages">Loading Messages… %1$d </string>
    <string name="loading_messages_0">Loading Messages… 0</string>
    <string name="sender">Sender :</string>

    <string name="email_subject">Feed back  %1$s</string>
    <string name="email_to">test@gmail.com</string>

    <!--  preference strings -->
    <string name="preference_masked_key">masked_phone_number</string>
    <string name="preference_hangup">hang_up</string>
    <string name="forward_pending_sms">Forward Pending Sms</string>
    <string name="printer">Printer Setup</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="cancel">Cancel</string>
    <string name="connect_printer">Connect Printer</string>

    <string name="preference_hang_up_reply">hang_up_reply</string>
    <string name="preference_reply_message">reply_message</string>

    <string name="connect_fail">Printer connection error</string>
    <string name="connect_lost">Disconnected</string>
    <string name="not_available">N/A</string>
    <string name="not_connected">Connection is not established</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="button_scan">Scan devices</string>
    <string name="none_paired">No device found</string>
    <string name="scanning">Searching&#8230;</string>
    <string name="select_device">Select device</string>
    <string name="none_found">No device found</string>
    <string name="connected">Connect to</string>
    <string name="bluetooth_not_available">Bluetooth not available</string>
    <string name="turnon_bluetooth">Turn on Bluetooth</string>
    <string name="pic_load_error">Error in loading picture</string>
    <string name="bixolon_brand">Bixolon</string>
    <string name="rongta_brand">Rongta</string>
    <string name="woosim_brand">Woosim</string>
    <string name="other_brands">Other printers</string>
    <string name="description">Choose your printer brand below:</string>
    <string name="do_print">Print</string>
    <string name="print_succ">Print done successfully</string>
    <string name="print_error">Error in printing</string>
    <string name="choose_printer">Choose your printer brand</string>
    <string name="remove_printer">Remove Printer</string>
    <string name="preference_call_forwarding">call_forwarding</string>
    <string name="preference_wifi_only">wifi_only</string>
    <string name="is_printer_connected">isPrinterConnected</string>

    <!-- Connection types -->
    <string name="Wifi">Connected to Wifi</string>
    <string name="mobile_data">Connected to Mobile Data</string>
    <string name="connection_lost">No Connection</string>

    <string name="log_file_name">log.txt</string>
    <string name="log_file_dir">logs</string>

</resources>