<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/logFragment"
            android:icon="@drawable/ic_logs"
            android:title="@string/menu_logs" />

        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/phoneStatusFragment"
            android:icon="@drawable/ic_phone_status"
            android:title="@string/menu_phone_status" />

        <item
            android:id="@+id/printerFragment"
            android:title="@string/printer"
            android:icon="@drawable/ic_print_black"
            />

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>


</menu>
